Added layered templates

--- a/views/index.html
+++ b/views/index.html
@@ -1,1 +1,6 @@
-You can check the <a href="hello">Hello World!</a> .
+List of samples:
+<ul>
+    <li><a href="hello/">Hello World (raw output)!</a> .</li>
+    <li><a href="hello/?using_template=y">Hello World (using template)!</a> .</li>
+    <li><a href="cookies/">Get the cookies</a> .</li>
+</ul>
