--- a/views/hello.html
+++ b/views/hello.html
@@ -1,1 +1,5 @@
-Hello ${word}
+## -*- coding: utf-8 -*-
+<%inherit file="base.html" />
+<%block name="title">Welcome</%block>
+## Page body
+Hello ${word}, using template.
