Replaced blocks with defs in the templates

--- a/views/hello.html
+++ b/views/hello.html
@@ -1,5 +1,5 @@
 ## -*- coding: utf-8 -*-
 <%inherit file="base.html" />
-<%block name="title">Welcome</%block>
+<%def name="title()">Welcome</%def>
 ## Page body
 Hello ${word}, using template.
