--- a/views/base.html
+++ b/views/base.html
@@ -10,13 +10,12 @@
     <body>
         <div class="header">
             <div class="header-inner"><h3>SimpleWeb - ${self.title()}<br><a href="/">Home</a></h3></div>
-
         </div>
         <div class="content">
            ${self.body()}
         </div>
         <div class="footer">
-            <div class="footer-inner">Xxx</div>
+            <div class="footer-inner"></div>
         </div>
     </body>
 </html>
