--- a/views/cookie.html
+++ b/views/cookie.html
@@ -1,9 +1,9 @@
 ## -*- coding: utf-8 -*-
 <%inherit file="base.html" />
-<%block name="title">Welcome</%block>
+<%def name="title()">Cookie</%def>
 ## Page body
 % if first_visit:
-Your first visit to this site was on §{first_visit}.<br>
+Your first visit to this site was on ${first_visit}.<br>
 <a href="${current_url}?clear_first_visit=yes">Clear first visit cookie</a></p>
 % else:
 This is your first visit to this site, curren time was was stored in your browser's cookie.<br>
