--- a/views/index.html
+++ b/views/index.html
@@ -1,6 +1,6 @@
 ## -*- coding: utf-8 -*-
 <%inherit file="base.html" />
-<%block name="title">Index</%block>
+<%def name="title()">Index</%def>
 ## Page body
 List of samples:
 <ul>
