--- a/views/index.html
+++ b/views/index.html
@@ -5,6 +5,7 @@
 List of samples:
 <ul>
     <li><a href="hello/">Hello World (raw output)!</a> .</li>
-    <li><a href="hello/?using_template=y">Hello World (using template)!</a> .</li>
-    <li><a href="cookies/">Get the cookies</a> .</li>
+    <li><a href="hello_using_template/">Hello World (using template)!</a> .</li>
+    <li><a href="hello_filters/">Hello Filters (using template)!</a> .</li>
+    <li><a href="cookie/">Get the cookies</a> .</li>
 </ul>
