Added index link to the path elements sample

--- a/views/index.html
+++ b/views/index.html
@@ -7,5 +7,6 @@ List of samples:
     <li><a href="hello/">Hello World (raw output)!</a> .</li>
     <li><a href="hello_using_template/">Hello World (using template)!</a> .</li>
     <li><a href="hello_filters/">Hello Filters (using template)!</a> .</li>
+    <li><a href="path_elements/">Handle dynamic path elements.</a> .</li>
     <li><a href="cookie/">Get the cookies</a> .</li>
 </ul>
