--- a/views/path_elements.html
+++ b/views/path_elements.html
@@ -1,6 +1,6 @@
 ## -*- coding: utf-8 -*-
 <%inherit file="base.html" />
-<%def name="title()">Filters</%def>
+<%def name="title()">Path elements</%def>
 
 ##
 Your current path: /${current_path}<br>
