--- a/css/layout.css
+++ b/css/layout.css
@@ -5,16 +5,30 @@
 /* Core styles */
 .header {
     position: relative; /* needed for stacking */
-    height: 100px;
+    height: 45px;
     width: 100%;
 }
+
+h3 {
+    margin: 0;
+}
+
+.header-inner {
+   padding: 10px;
+}
+
 .content {
     position: relative; /* needed for stacking */
     width: 100%;
-    height: 500px;
+    height: 600px;
 }
+
+.content-inner {
+    padding: 10px;
+}
+
 .footer {
     position: relative; /* needed for stacking */
     width: 100%;
-    height: 100px;
+    height: 45px;
 }
