Added the "View Source" link

--- a/views/base.html
+++ b/views/base.html
@@ -19,7 +19,10 @@
             </div>
         </div>
         <div class="footer">
-            <div class="footer-inner"></div>
+            <div class="footer-inner">
+                <A HREF="/view_source${controller_url}">View Python Source</A>
+                - <A HREF="/view_source${controller_url}">View Mako Template</A>
+            </div>
         </div>
     </body>
 </html>
