--- a/views/base.html
+++ b/views/base.html
@@ -20,8 +20,7 @@
         </div>
         <div class="footer">
             <div class="footer-inner">
-                <A HREF="/view_source${controller_url}">View Python Source</A>
-                - <A HREF="/view_source${controller_url}">View Mako Template</A>
+                <A HREF="/view_source/${controller_path[1]}">View Source</A>
             </div>
         </div>
     </body>
