--- a/views/index.html
+++ b/views/index.html
@@ -4,9 +4,8 @@
 ## Page body
 List of samples:
 <ul>
-    <li><a href="hello/">Hello World (raw output)!</a> .</li>
-    <li><a href="hello_using_template/">Hello World (using template)!</a> .</li>
-    <li><a href="hello_filters/">Hello Filters (using template)!</a> .</li>
-    <li><a href="path_elements/">Handle dynamic path elements.</a> .</li>
-    <li><a href="cookie/">Get the cookies</a> .</li>
+    <li><a href="hello/">Hello World</a>!</li>
+    <li><a href="hello_filters/">Hello Filters</a>.</li>
+    <li><a href="path_elements/">Handle dynamic path elements</a>.</li>
+    <li><a href="cookie/">Get the cookies</a>.</li>
 </ul>
