Added (but disabled) code for inherited templates dump on 'view source'

--- a/views/path_elements.html
+++ b/views/path_elements.html
@@ -1,7 +1,6 @@
 ## -*- coding: utf-8 -*-
 <%inherit file="base.html" />
-<%def name="title()">Path elements</%def>
+<%def name="title()">Path Elements</%def>
 
-##
 Your current path: /${current_path}<br>
 Walk to <a href="${controller_url}${next_path}/">next</a> .
