Moved static contents to /static and added jquery js

--- a/views/base.html
+++ b/views/base.html
@@ -5,7 +5,8 @@
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <title>SimpleWeb - ${self.title()}</title>
-        <link rel="stylesheet" type="text/css" href="/css/layout.css">
+        <link rel="stylesheet" type="text/css" href="/css/layout.css" />
+        <script src="/js/jquery.min.js" /></script>
     </head>
     <body>
         <div class="header">
