--- a/views/index.html
+++ b/views/index.html
@@ -6,6 +6,7 @@ List of samples:
 <ul>
     <li><a href="hello/">Hello World</a>!</li>
     <li><a href="hello_filters/">Hello Filters</a>.</li>
+    <li><a href="get_params/?name=Bob">Get parameters</a>.</li>
     <li><a href="path_elements/">Handle dynamic path elements</a>.</li>
     <li><a href="cookie/">Get the cookies</a>.</li>
 </ul>
