Added inpurt form sample

--- a/views/index.html
+++ b/views/index.html
@@ -8,5 +8,6 @@ List of samples:
     <li><a href="hello_filters/">Hello Filters</a>.</li>
     <li><a href="get_params/?name=Bob">Get parameters</a>.</li>
     <li><a href="path_elements/">Handle dynamic path elements</a>.</li>
+    <li><a href="form/">Simple input form</a>.</li>
     <li><a href="cookie/">Get the cookies</a>.</li>
 </ul>
