Added sqrt() caculation to the input form sample

--- a/views/base.html
+++ b/views/base.html
@@ -1,12 +1,12 @@
 ## -*- coding: utf-8 -*-
 ## base.html
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+<!DOCTYPE html>
 <html>
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <title>SimpleWeb - ${self.title()}</title>
         <link rel="stylesheet" type="text/css" href="/css/layout.css" />
-        <script src="/js/jquery.min.js" /></script>
+        <script src="/js/jquery.min.js"></script>
     </head>
     <body>
         <div class="header">
