--- a/views/form_submit.html
+++ b/views/form_submit.html
@@ -1,6 +1,5 @@
 ## -*- coding: utf-8 -*-
 <%inherit file="base.html" />
 <%def name="title()">Form Submit</%def>
-Thanks for submitting your information:<br>
-First Name: ${firstname | h}<br>
-Last Name: ${lastname | h}<br>
+Thanks for submitting the information ${name | h} .<br>
+The square root of ${number} is ${number_sqrt} .
