--- a/views/form.html
+++ b/views/form.html
@@ -2,7 +2,7 @@
 <%inherit file="base.html" />
 <%def name="title()">Form</%def>
 <form method="POST">
-    <p>First name: <input type="text" name="firstname">
-    Last name: <input type="text" name="lastname"></p>
+    Name: <input type="text" name="name" autofocus><br>
+    Number:<input type="text" name="number" size="4"><br>
     <input type="submit" value="Submit">
 </form>
