Adopted the bootstrap starter template

--- a/views/base.html
+++ b/views/base.html
@@ -1,28 +1,62 @@
 ## -*- coding: utf-8 -*-
 ## base.html
 <!DOCTYPE html>
-<html>
-    <head>
-        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-        <title>SimpleWeb - ${self.title()}</title>
-        <link rel="stylesheet" type="text/css" href="/css/layout.css" />
-        <script src="/js/jquery.min.js"></script>
-    </head>
-    <body>
-        <div class="header">
-            <div class="header-inner">
-                <h3><a href="/">Home</a> - SimpleWeb: ${self.title()}</h3>
-            </div>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <link rel="icon" href="../../favicon.ico">
+
+    <title>SimpleWeb - ${self.title()}</title>
+
+
+    <!-- Bootstrap core CSS -->
+    <link href="/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Custom styles for this template -->
+    <link href="/css/starter-template.css" rel="stylesheet">
+
+  </head>
+
+  <body>
+
+    <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#"</a>
         </div>
-        <div class="content">
-            <div class="content-inner">
-            ${self.body()}
-            </div>
-        </div>
-        <div class="footer">
-            <div class="footer-inner">
-                <A HREF="/view_source/${controller_path[1]}">View Source</A>
-            </div>
-        </div>
-    </body>
+        <div class="collapse navbar-collapse">
+          <ul class="nav navbar-nav">
+            <li class="active"><a href="/">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#contact">Contact</a></li>
+          </ul>
+        </div><!--/.nav-collapse -->
+      </div>
+    </div>
+
+    <div class="container">
+
+      <div class="starter-template">
+        ${self.body()}
+      </div>
+
+    </div><!-- /.container -->
+
+
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="/js/jquery-1.11.1.min.js"></script>
+    <script src="/js/bootstrap.min.js"></script>
+  </body>
 </html>
