--- a/views/index.html
+++ b/views/index.html
@@ -2,12 +2,12 @@
 <%inherit file="base.html" />
 <%def name="title()">Index</%def>
 ## Page body
-List of samples:
-<ul>
-    <li><a href="hello/">Hello World</a>!</li>
-    <li><a href="hello_filters/">Hello Filters</a>.</li>
-    <li><a href="get_params/?name=Bob">Get parameters</a>.</li>
-    <li><a href="path_elements/">Handle dynamic path elements</a>.</li>
-    <li><a href="form/">Simple input form</a>.</li>
-    <li><a href="cookie/">Get the cookies</a>.</li>
+<ul class="nav nav-pills nav-stacked">
+  <li class="active"><a href="#">List of samples</a></li>
+    <li><a href="hello/">Hello World!</a></li>
+    <li><a href="hello_filters/">Hello Filters</a></li>
+    <li><a href="get_params/?name=Bob">Get parameters</a></li>
+    <li><a href="path_elements/">Handle dynamic path elements</a></li>
+    <li><a href="form/">Simple input form</a></li>
+    <li><a href="cookie/">Get the cookies</a></li>
 </ul>
