Adapted the form sample to bootstrap input

--- a/views/base.html
+++ b/views/base.html
@@ -15,6 +15,7 @@
 
     <!-- Bootstrap core CSS -->
     <link href="/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
     <link href="/css/starter-template.css" rel="stylesheet">
@@ -43,15 +44,15 @@
         </div><!--/.nav-collapse -->
       </div>
     </div>
-
     <div class="container">
 
       <div class="starter-template">
         ${self.body()}
+        <br><br>
+        <A HREF="/view_source/${controller_path[1]}">View Source</A>
       </div>
 
     </div><!-- /.container -->
-
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
