--- a/views/form.html
+++ b/views/form.html
@@ -1,8 +1,22 @@
 ## -*- coding: utf-8 -*-
 <%inherit file="base.html" />
 <%def name="title()">Form</%def>
-<form method="POST">
-    Name: <input type="text" name="name" autofocus><br>
-    Number:<input type="text" name="number" size="4"><br>
-    <input type="submit" value="Submit">
+<form role="form" method="post">
+  <div class="form-group row">
+    <div class="col-xs-6">
+        <label>Name</label>
+        <input type="text" class="form-control col-lg-3" name="name" placeholder="Type your name">
+    </div>
+  </div>
+  <div class="form-group row">
+      <div class="col-xs-1">
+            <label>Number</label>
+            <input type="text" class="form-control" name="number" placeholder="Nr">
+        </div>
+  </div>
+  <div class="form-group row">
+    <div class="col-xs-1">
+        <button type="submit" class="btn btn-default">Submit</button>
+    </div>
+  </div>
 </form>
