Added a minimal description to the home page

--- a/views/form_submit.html
+++ b/views/form_submit.html
@@ -1,5 +1,5 @@
 ## -*- coding: utf-8 -*-
 <%inherit file="base.html" />
 <%def name="title()">Form Submit</%def>
-Thanks for submitting the information ${name | h} .<br>
-The square root of ${number} is ${number_sqrt} .
+${name}, thanks for submitting the information.<br>
+The square root of <strong>${number}</strong> is <mark>${number_sqrt}</mark> .
