--- a/views/form.html
+++ b/views/form.html
@@ -9,9 +9,9 @@
     </div>
   </div>
   <div class="form-group row">
-      <div class="col-xs-1">
+      <div class="col-xs-2">
             <label>Number</label>
-            <input type="text" class="form-control" name="number" placeholder="Nr">
+            <input type="text" class="form-control" name="number" placeholder="Type a number">
         </div>
   </div>
   <div class="form-group row">
