Added source link

--- a/views/index.html
+++ b/views/index.html
@@ -16,7 +16,7 @@ The sample applications use the HTML, CSS, and JS <a href="http://getbootstrap.c
 </ul>
 <br>
 <ul class="nav nav-pills nav-stacked">
-  <li class="active"><a href="#">List of samples</a></li>
+    <li class="active"><a href="#">List of samples</a></li>
     <li><a href="hello/">Hello World!</a></li>
     <!-- Needs to be reworked: <li><a href="hello_filters/">Hello Filters</a></li> -->
     <li><a href="get_params/?name=Bob">Get parameters</a></li>
@@ -24,3 +24,4 @@ The sample applications use the HTML, CSS, and JS <a href="http://getbootstrap.c
     <li><a href="form/">Simple input form</a></li>
     <li><a href="cookie/">Setting and getting browser cookies</a></li>
 </ul>
+<p class="bg-info">The full source code for this project is available <a href="https://github.com/joaompinto/simpleweb-app">here</a>.<p>
