--- a/views/index.html
+++ b/views/index.html
@@ -9,7 +9,7 @@ by integrating some of the best python components for each function.
 The HTTP/Web Application engine is built on top of <a HREF="http://www.cherrypy.org/">CherryPy</a>.
 The view/rendering uses the <a HREF="http://www.makotemplates.org/">Mako</a> templating library.
 The data modeling component is still being defined.
-The sample applications use the HTML, CSS, and JS <a href="http://getbootstrap.com/">Boostrap</a> framework.
+The sample applications use the HTML, CSS, and JS <a href="http://getbootstrap.com/">Bootstrap</a> framework.
 <p>It was packages/tested for the following Platform as a Service (PaaS) cloud offerings:</p>
 <ul>
     <li><a href="https://cloud.google.com/appengine/">Google Application Engine</a></li>
