--- a/views/form_submit.html
+++ b/views/form_submit.html
@@ -1,5 +1,5 @@
 ## -*- coding: utf-8 -*-
 <%inherit file="base.html" />
-<%def name="title()">Form Submit</%def>
+<%block name="title">Form Submit</%block>
 ${name}, thanks for submitting the information.<br>
 The square root of <strong>${number}</strong> is <mark>${number_sqrt}</mark> .
