--- a/views/get_params.html
+++ b/views/get_params.html
@@ -1,4 +1,4 @@
 ## -*- coding: utf-8 -*-
 <%inherit file="base.html" />
-<%def name="title()">Get Params</%def>
+<%block name="title">Get Params</%block>
 Hello ${show_name} !
