--- a/views/hello.html
+++ b/views/hello.html
@@ -1,5 +1,5 @@
 ## -*- coding: utf-8 -*-
 <%inherit file="base.html" />
-<%def name="title()">Welcome</%def>
+<%block name="title">Welcome</%block>
 ## Page content
 Hello ${word}, using template.
