--- a/views/base.html
+++ b/views/base.html
@@ -48,7 +48,7 @@
       <div class="starter-template">
         ${self.body()}
         <br><br>
-        <A HREF="/view_source/${controller_path[1]}">View Source</A>
+        <a HREF="/view_source/${controller_path[1]}/">View Source</a>
       </div>
 
     </div><!-- /.container -->
