--- a/views/view_source.html
+++ b/views/view_source.html
@@ -2,4 +2,4 @@
 <%inherit file="base.html" />
 <%block name="title">View Source</%block>
 ${content | n}
-<a href="/${source_name}">View Page</a>
+<a href="/${source_name}/">View Page</a>
